--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
         </div>
       </div>
 
+      <div class="mouseRadiusContainer controlPanelItem">
+        <div class="flexRow left">
+          <div class="leftSideText">Mouse Radius:</div>
+          <div class="mouseRadius mainText"></div>
+        </div>
+        <div class="flexRow right">
+          <div class="increaseMouseRadius button" onclick="changedUI(event)">+</div>
+          <input class="mouseRadiusInput" value="1">
+          <div class="decreaseMouseRadius button" onclick="changedUI(event)">-</div>
+        </div>
+      </div>
+
     </div>
     
   </body>
